[package]
name = "public-point"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials = { tag = "0.3.7", git = "https://github.com/majksa-dev/rust-essentials" }
gateway = { tag = "0.9.0", features = ["tls"], git = "https://github.com/majksa-dev/rust-gateway"}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
envy = "0.4.2"
regex = "1.10.6"
async-trait = "0.1.82"
http = "1.1.0"
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.88"
url = "2.5.2"
rustls-pemfile = "2.1.3"

[dev-dependencies]
testing-utils = { tag = "0.1.5", git = "https://github.com/majksa-dev/rust-testing-utils" }
pretty_assertions = "1.4.0"
wiremock = "0.6.2"
tokio-rustls = "0.26.0"
rcgen = "0.13.1"

